# LS_Sim

./: README.md
LS_Sim/: CMakeLists.txt  CMakeLists1.txt  README.md  apptainer_opticks.def  build.sh  detsim.mac  e-1.mac  example.cc  go.sh  photon.mac  run.sh  toy.root  tut_detsim.sh
LS_Sim/include/: ContinuousSpectrumManager.hh  ContinuousSpectrumMessenger.hh  DsG4Scintillation.hh  G4Cerenkov_modified.hh  LSActionInitialization.hh  LSActionInitializationMessenger.hh  LSAnalysisManager.hh  LSAnalysisMessenger.hh  LSCherenkov.hh  LSDetectorConstruction.hh  LSDetectorConstructionMessenger.hh  LSDetectorConstruction_Opticks.hh  LSDetectorHit.hh  LSDetectorMessenger.hh  LSDetectorSD.hh  LSDetectorSDMessenger.hh  LSEventAction.hh  LSOpticksEventConfigMessenger.hh  LSParticleSource.hh  LSParticleSourceMessenger.hh  LSPhysicsList.hh  LSPhysicsListMessenger.hh  LSPmtSD.hh  LSPrimaryGeneratorAction.hh  LSRunAction.hh  LSSteppingAction.hh  LSTrackingAction.hh  MyAnalysisManager.hh  MyAnalysisMessenger.hh  MyRootBasedAnalysis.hh  NormalTrackInfo.hh  PMTTool.hh
LS_Sim/params/: abslength.txt  draw.py  draw_npe.py
LS_Sim/src/: ContinuousSpectrumManager.cc  ContinuousSpectrumMessenger.cc  DsG4Scintillation.cc  G4Cerenkov_modified.cc  LSActionInitialization.cc  LSActionInitializationMessenger.cc  LSAnalysisManager.cc  LSAnalysisMessenger.cc  LSCherenkov.cc  LSDetectorConstruction.cc  LSDetectorConstructionMesenger.cc  LSDetectorConstruction_Opticks.cc  LSDetectorHit.cc  LSDetectorSD.cc  LSDetectorSDMessenger.cc  LSEventAction.cc  LSOpticksEventConfigMessenger.cc  LSParticleSource.cc  LSParticleSourceMessenger.cc  LSPhysicsList.cc  LSPhysicsListMessenger.cc  LSPmtSD.cc  LSPrimaryGeneratorAction.cc  LSRunAction.cc  LSSteppingAction.cc  LSTrackingAction.cc  MyAnalysisManager.cc  MyAnalysisMessenger.cc  MyRootBasedAnalysis.cc  NormalTrackInfo.cc  OpticalProperty.icc
LS_Sim/test/: compare.py
LS_Sim/tmp/: LSPmtSD.cc  LSPmtSD.hh
